--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,9 @@ dependencies:
   zego_uikit_prebuilt_video_conference: ^2.6.9
   flutter_dotenv: ^5.1.0
   dropdown_button2: ^2.3.8
-  flutter_verification_code_field: ^1.0.0
+  flutter_verification_code_field: ^1.0.4
+  video_player: ^2.8.2
+  chewie: ^1.7.4
 
 dev_dependencies:
   flutter_test:
