--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,6 +23,7 @@ if (flutterVersionName == null) {
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'com.google.gms.google-services'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
@@ -59,4 +60,9 @@ android {
 
 flutter {
     source '../..'
+}
+
+dependencies {
+    implementation platform("com.google.firebase:firebase-bom:32.7.3"),
+    implementation("com.google.firebase:firebase-analytics")
 }
