--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   google_sign_in: ^6.2.1
   firebase_auth: ^4.17.6
   firebase_core: ^2.25.5
+  easy_date_timeline: ^1.0.5
 
 dev_dependencies:
   flutter_test:
