--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   easy_date_timeline: ^1.0.5
   intl: ^0.19.0
   provider:
+  google_fonts: ^6.2.1
+  flutter_switch: ^0.3.2
+  unicons: ^2.1.1
 
 dev_dependencies:
   flutter_test:
