update locale language

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,15 @@ dependencies:
   google_sign_in: ^6.2.1
   firebase_auth: ^4.17.6
   firebase_core: ^2.25.5
-  easy_date_timeline: ^1.0.5
-  intl: ^0.19.0
+  easy_date_timeline: ^1.0.3
+  intl: ^0.18.1
   provider:
   google_fonts: ^6.2.1
   flutter_switch: ^0.3.2
   unicons: ^2.1.1
+  shared_preferences:
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +46,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
+  generate: true
   uses-material-design: true
   assets:
     - assets/
