--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,6 @@ dependencies:
   shared_preferences:
   flutter_localizations:
     sdk: flutter
-  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
@@ -51,5 +50,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
-    - assets/icons/
     - .env
+  fonts:
+    - family: CustomIcons
+      fonts:
+        - asset: assets/fonts/CustomIcons.ttf
