--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   unicons: ^2.1.1
   custom_refresh_indicator: ^3.0.0
   shared_preferences:
+  animated_text_kit: ^4.2.2
   flutter_localizations:
     sdk: flutter
 
