--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   custom_refresh_indicator: ^3.0.0
   shared_preferences:
   animated_text_kit: ^4.2.2
+  flutter_carousel_widget: ^2.2.0
   flutter_localizations:
     sdk: flutter
 
