--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   flutter_carousel_widget: ^2.2.0
   comment_tree: ^0.3.0
+  flutter_stepindicator: ^0.1.7
   flutter_localizations:
     sdk: flutter
   shimmer: ^3.0.0
