--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   google_sign_in: ^6.2.1
   firebase_auth: ^4.17.6
   firebase_core: ^2.25.5
+  firebase_storage: ^11.6.10
+  cloud_firestore: ^4.15.9
   easy_date_timeline: ^1.0.3
   intl: ^0.18.1
   provider:
@@ -44,6 +46,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   shimmer: ^3.0.0
+  firebase_app_check: ^0.2.1+18
 
 dev_dependencies:
   flutter_test:
