--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   shimmer: ^3.0.0
-  firebase_app_check: ^0.2.1+18
+  dart_jsonwebtoken: ^2.13.0
 
 dev_dependencies:
   flutter_test:
