--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   firebase_core: ^2.25.5
   firebase_storage: ^11.6.10
   cloud_firestore: ^4.15.9
+  firebase_messaging: ^14.7.20
+  flutter_local_notifications:
   easy_date_timeline: ^1.0.3
   intl: ^0.18.1
   provider:
