--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -48,9 +48,7 @@
                 <data
                     android:host="pagepals.azurewebsites.net"
                     android:scheme="http" />
-                <data
-                    android:host="pagepals.azurewebsites.net"
-                    android:scheme="https" />
+                <data android:scheme="https" />
 
                 <action android:name="android.intent.action.VIEW" />
 
