--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_slidable: ^3.1.0
   flutter_localizations:
     sdk: flutter
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
