--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   url_launcher: ^6.2.5
   fl_chart: ^0.66.2
   flutter_slidable: ^3.1.0
+  audioplayers: ^6.0.0
   flutter_localizations:
     sdk: flutter
   flutter_rating_bar: ^4.0.1
