--- a/android/.gitignore
+++ b/android/.gitignore
@@ -4,7 +4,7 @@ gradle-wrapper.jar
 /gradlew
 /gradlew.bat
 /local.properties
-/android/mobilertc/mobilertc.aar
+/android/mobilertc
 GeneratedPluginRegistrant.java
 
 # Remember to never publicly share your keystore.
