--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   uuid:
   open_filex:
   path_provider:
-  zego_uikit_prebuilt_video_conference: ^2.6.9
+#  zego_uikit_prebuilt_video_conference: ^2.6.9
 #  zego_uikit_prebuilt_call: ^4.7.3
   flutter_dotenv: ^5.1.0
   dropdown_button2: ^2.3.8
