--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -54,11 +54,21 @@ android {
         }
     }
 
+//    signingConfigs {
+//        release {
+//            storeFile file('C:/Users/HUYNHD/key.keystore')
+//            storePassword 'android'
+//            keyAlias 'key'
+//            keyPassword 'android'
+//        }
+//    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.release
+//            signingConfig signingConfigs.debug
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
