--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,14 +45,14 @@ android {
         multiDexEnabled true
     }
 
-    signingConfigs {
-        release {
-            storeFile file('C:/Users/Lenovo/key.keystore')
-            storePassword 'android'
-            keyAlias 'key'
-            keyPassword 'android'
-        }
-    }
+//    signingConfigs {
+//        release {
+//            storeFile file('C:/Users/Lenovo/key.keystore')
+//            storePassword 'android'
+//            keyAlias 'key'
+//            keyPassword 'android'
+//        }
+//    }
 
 //    signingConfigs {
 //        release {
@@ -67,8 +67,8 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.release
-//            signingConfig signingConfigs.debug
+//            signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
