add recording screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_rating_bar: ^4.0.1
+  webview_flutter: ^4.7.0
 
 dev_dependencies:
   flutter_test:
