--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,6 @@ dependencies:
   uuid:
   open_filex:
   path_provider:
-#  zego_uikit_prebuilt_video_conference: ^2.6.9
-#  zego_uikit_prebuilt_call: ^4.7.3
   flutter_dotenv: ^5.1.0
   dropdown_button2: ^2.3.8
   flutter_verification_code_field: ^1.0.4
@@ -58,6 +56,7 @@ dependencies:
     sdk: flutter
   flutter_rating_bar: ^4.0.1
   webview_flutter: ^4.7.0
+  flutter_widget_from_html_core: ^0.14.12
 
 dev_dependencies:
   flutter_test:
